// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PathoscopeIsolate /> should render 1`] = `
<Isolate__StyledPathoscopeIsolate>
  <Isolate__PathoscopeIsolateHeader>
    Isolate A
    <PathoscopeIsolateWeight
      reads={102}
    />
    <strong
      className="small text-danger"
    >
      13
    </strong>
    <strong
      className="small text-primary"
    >
      NaN
    </strong>
  </Isolate__PathoscopeIsolateHeader>
  <ScrollSyncPane
    enabled={true}
    group="default"
  >
    <Isolate__PathoscopeChartRibbon>
      <CoverageChart
        definition="Foo Hit"
        id="foo"
        key="0"
        length={5}
        showYAxis={true}
        yMax={22}
      />
      <CoverageChart
        definition="Bar Hit"
        id="bar"
        key="1"
        length={8}
        showYAxis={false}
        yMax={22}
      />
    </Isolate__PathoscopeChartRibbon>
  </ScrollSyncPane>
</Isolate__StyledPathoscopeIsolate>
`;

exports[`<PathoscopeIsolateWeight /> should render reads 1`] = `
<strong
  className="small text-success"
>
  121
</strong>
`;

exports[`<PathoscopeIsolateWeight /> should render weight 1`] = `
<strong
  className="small text-success"
>
  0.321
</strong>
`;

exports[`<PathoscopeIsolateWeight /> should render weight in scientific notation 1`] = `
<strong
  className="small text-success"
>
  3.21E-7
</strong>
`;
